# cinema-release-watcher

./: README.md  config.yaml  pyproject.toml
.github/workflows/: cron.yaml
alerts/: interface.py  telegram.py
cinema_release_watcher/: config.py  constants.py  main.py  object_utils.py
cinema_release_watcher/api_clients/: base.py
cinema_release_watcher/api_clients/alerts/: interface.py  telegram.py
cinema_release_watcher/api_clients/movies/: interface.py  tmdb.py
cinema_release_watcher/domain/: movies.py
cinema_release_watcher/messages/: pdf.py  text.py
cinema_release_watcher/utils/: image_utils.py  object_utils.py
templates/: alert.html
