[tool.poetry]
name = "cinema-release-watcher"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "cinema_release_watcher"}]

[tool.poetry.dependencies]
python = "^3.9"
pyaml-env = "^1.2.1"
requests = "^2.28.1"
frozendict = "^2.3.4"
dataclasses-json = "^0.5.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

